@@ -1,3 +1,7 @@
+2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* struct (matrix): Fixed bug #532783.
+
 2002-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* ftpd: Fixed SF Bug #531799.
